# atomcanvas

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  HANDOFF.md  LICENSE  README.md
.github/workflows/: ci.yml
backend/: pyproject.toml  requirements-dev.txt  requirements.txt  run.sh
backend/app/: cli.py  main.py  models.py
backend/app/routers/: bonds.py  editing.py  selection.py  structure.py
backend/app/services/: bond_override_ops.py  building_ops.py  chem_utils.py  editing_ops.py  export_ops.py  format_capabilities.py  geometry.py  geometry_cache.py  heuristics.py  kekule.py  rdkit_bridge.py  render_browser.py  render_support.py  selection_ops.py  selection_parser.py  structure_utils.py
backend/tests/: conftest.py  test_advanced_selection.py  test_aromaticity_fallback.py  test_bond_overrides_feature.py  test_building_supercell.py  test_cli.py  test_cli_render.py  test_cli_serve.py  test_editing_bonds.py  test_editing_create_bond.py  test_editing_translate.py  test_format_capabilities.py  test_geometry_cache.py  test_geometry_inference.py  test_kekule_orders.py  test_lazy_rdkit.py  test_pbc_ghost_bond_anchoring.py  test_render_support.py  test_selection_api_overrides.py  test_selection_ast.py  test_selection_overrides.py  test_selection_parser.py  test_selection_parser_bugs.py  test_selection_parser_span.py  test_static_frontend.py  test_structure_export.py  test_structure_topology.py  test_update_visualization_bond_mode.py  test_upload_format_hints.py
docs/: ARCHITECTURE.md  CLI.md  EXPORT.md  FEATURES.md  GALLERY.md  RUN.md
docs/superpowers/plans/: 2026-06-13-atomcanvas-v1.md  2026-06-14-advanced-selection-port.md  2026-06-14-atomcanvas-ux-workflow.md
docs/superpowers/specs/: 2026-06-13-atomcanvas-design.md  2026-06-14-advanced-selection-port-design.md  2026-06-14-atomcanvas-ux-design.md
fixtures/: c60_on_ago.cif  nacl.cif  nacl_supercell.cif  single_c.xyz  slab.cif  water.xyz  water_traj.extxyz
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: branding.spec.ts  empty-state.spec.ts  undo-redo.spec.ts  visualize-edit-export.spec.ts
frontend/public/: atom.json
frontend/scripts/: capture-feature-shots.mjs  capture-gifs.mjs
frontend/src/: App.tsx  index.css  main.tsx  renderHook.test.ts  renderHook.ts
frontend/src/data/: radii.json
frontend/src/hooks/: useAtomColors.ts  useBondEdits.test.ts  useBondEdits.ts  useLoadAtomStyles.ts
frontend/src/services/: apiClient.ts  batchExport.test.ts  batchExport.ts  bondService.test.ts  bondService.ts  cameraRotation.ts  captureHandle.ts  download.ts  elementStyleApply.test.ts  (+19 more)
scripts/: build.sh  check.sh  install-hooks.sh  serve.sh  start.sh  stop.sh
scripts/hooks/: pre-commit
(+138 files in other folders)
